<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/people_card_bg"
    android:layout_marginTop="8dp">

    <ImageView
        android:id="@+id/imageView_Testimonial"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/testimonial01_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/testimonial1" />

    <TextView
        android:id="@+id/textView_Testimonial_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/testimonial01_name"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_Testimonial"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Testimonial_Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/testimonial01_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Testimonial"
        app:layout_constraintTop_toBottomOf="@+id/textView_Testimonial_Name" />
</androidx.constraintlayout.widget.ConstraintLayout>