<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_Circle"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle_cv" />

    <View
        android:id="@+id/view_Line"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="8dp"
        android:background="@color/cv_line_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Experience_Content"
        app:layout_constraintEnd_toStartOf="@+id/textView_Experience_Content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView_Circle"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Circle" />

    <TextView
        android:id="@+id/textView_Experience_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/experience_title_01"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_Circle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Experience_Duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/experience_duration_01"
        app:layout_constraintStart_toEndOf="@+id/imageView_Circle"
        app:layout_constraintTop_toBottomOf="@+id/textView_Experience_Title" />

    <TextView
        android:id="@+id/textView_Experience_Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="4sp"
        android:padding="8dp"
        android:text="@string/experience_detail_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_Circle"
        app:layout_constraintTop_toBottomOf="@+id/textView_Experience_Duration" />

</androidx.constraintlayout.widget.ConstraintLayout>